2009-01-16  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Several fixes.

2009-01-15  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: min_alerts now works as expected.

2009-01-15  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm: Partially rewrote the alert core to support the
	  new DB schemas. Compound alerts have been temporarily disabled.
	  Rewrote alert macro substitution code.

	* lib/PandoraFMS/Tools.pm,
	  bin/pandora_snmpconsole: Aesthetic changes to enterprise code.

	* lib/PandoraFMS/Config.pm,
	  bin/pandora_network: Added support for UDP multicast status reports
	  (enterprise version).

2009-01-14  Sancho Lerena <slerena@artica.es>

	* DB.pm: Solved an invalid reference to hash variable affecting to
	postprocess calculation.

	* pandora_recon: Now is compatible with the latest changes. Solved a
	problem in eval() block. Also fixed a old bug mixing network profiles.
	This fix will be ported to stable version ASAP.


2009-01-12  Sancho Lerena <slerena@artica.es>

	* Makefile.PL: Path to libs was wrong. Fixed.
	
	* pandora_db.pl: Fixed small bug.

2009-01-12  Sancho Lerena <slerena@artica.es>

	This is a MAJOR upgrade that _BREAK_ your current 2.1 trunk version.
	Needs an upgrade of DB Schema. At this time no conversion tool has been
	provided. Libs and console needs also to be re-deployed.
	
	* pandora_server: KeepAlive module is now processed OUTSIDE 
	pandora_lastagentcontact() function, in it's own function. This makes that
	keepalive only be refreshed on agent data, not network. This should 
	make keepalive works as "agent down detector" in a definitive way, also
	it's an important performance improvement operation.
	
	* pandora_db.pl: Performance improvements. If compact days = 0 skip. 
	Compactation and delete needs to be improved in speed.
	
	* DB.pm: Added more generic DB access functions (db_insert, db_update, 
	db_delete). Major rewrite of pandora_writestate(). Now uses three different